--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
           package="com.ajshimamura.isucamade"
           android:versionCode="1"
           android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="19"/>
-  <application android:label="@string/app_name" android:icon="@drawable/isucamade">
+  <uses-sdk android:minSdkVersion="14"/>
+  <application android:label="@string/app_name" android:icon="@drawable/isucamade" android:theme="@style/CustomActionBarTheme">
     <activity android:name="MyActivity"
               android:label="@string/app_name">
       <intent-filter>
