--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
-local.properties
 gen/
 bin/
 out/
 proguard_logs
 isucamade.apk
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
